--- a/applications/Supercar-Trader/src/main/resources/services/api-service.properties
+++ b/applications/Supercar-Trader/src/main/resources/services/api-service.properties
@@ -4,7 +4,7 @@ listener.port=8171
 root.context=api
 servlet.class=supercars.services.api.ApiServlet
 appd.tier.name=Api-Services
-appd.node.name=Api-Services_Node
+appd.node.name=Api-Services_Node-01
 mem.xms=64m
 mem.xmx=512m
 mem.max.perm=256m
