--- a/applications/Supercar-Trader/pom.xml
+++ b/applications/Supercar-Trader/pom.xml
@@ -71,11 +71,11 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.6</version>
 		</dependency>
-		<!-- dependency>
-		    <groupId>org.apache.oodt</groupId>
-		    <artifactId>oodt-xmlps</artifactId>
-		    <version>0.7</version>
-		</dependency  -->
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.17</version>
+		</dependency>
     </dependencies>
 
     <build>
