--- a/applications/Supercar-Trader/src/main/resources/services/insurance-service.properties
+++ b/applications/Supercar-Trader/src/main/resources/services/insurance-service.properties
@@ -1,5 +1,5 @@
 service.process.name=supercars-insurance
-service.lib.dir=/usr/local/apache/apache-tomcat-7.0.99/webapps/Supercar-Trader/WEB-INF/lib
+service.lib.dir=/usr/local/apache/apache-tomcat-7/webapps/Supercar-Trader/WEB-INF/lib
 listener.port=8173
 root.context=insurance
 servlet.class=supercars.services.insurance.InsuranceServlet
