--- a/applications/Supercar-Trader/src/main/resources/services/api-service.properties
+++ b/applications/Supercar-Trader/src/main/resources/services/api-service.properties
@@ -1,5 +1,5 @@
 service.process.name=supercars-api
-service.lib.dir=/usr/local/apache/apache-tomcat-7.0.99/webapps/Supercar-Trader/WEB-INF/lib
+service.lib.dir=/usr/local/apache/apache-tomcat-7/webapps/Supercar-Trader/WEB-INF/lib
 listener.port=8171
 root.context=api
 servlet.class=supercars.services.api.ApiServlet
