--- a/applications/Supercar-Trader/src/main/webapp/WEB-INF/web.xml
+++ b/applications/Supercar-Trader/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 "http://java.sun.com/j2ee/dtds/web-app_2_2.dtd">
 <web-app>
-    <display-name>Struts Examples Application</display-name>
+    <display-name>Supercar-Trader</display-name>
     <!-- Standard Action Servlet Configuration (with debugging) -->
     <servlet>
         <servlet-name>action</servlet-name>
