--- a/labs/appd-apm-java-101/appd-apm-java-101.json
+++ b/labs/appd-apm-java-101/appd-apm-java-101.json
@@ -7,7 +7,7 @@
     "tags": [
         {"title": "AppDynamics"},
         {"title": "Beginner"},
-        {"title": "Javascript"}
+        {"title": "Java"}
     ],
     "files": [{
             "title": "Getting started",
