--- a/labs/appd-apm-java-101/appd-apm-java-101.json
+++ b/labs/appd-apm-java-101/appd-apm-java-101.json
@@ -30,11 +30,11 @@
             "file": "5.md"
         },
         {
-            "title": "Monitor and troubleshoot application issues",
+            "title": "Monitor and troubleshoot application issues : Part 1",
             "file": "6.md"
         },
         {
-            "title": "Configure health rules and alerts",
+            "title": "Monitor and troubleshoot application issues : Part 2",
             "file": "7.md"
         }
     ],
