--- a/labs/appd-apm-java-101/appd-apm-java-101.json
+++ b/labs/appd-apm-java-101/appd-apm-java-101.json
@@ -30,11 +30,11 @@
             "file": "lab-exercise-05.md"
         },
         {
-            "title": "Monitor and troubleshoot application issues : Part 1",
+            "title": "Monitor and troubleshoot application issues - Part 1",
             "file": "lab-exercise-06.md"
         },
         {
-            "title": "Monitor and troubleshoot application issues : Part 2",
+            "title": "Monitor and troubleshoot application issues - Part 2",
             "file": "lab-exercise-07.md"
         }
     ],
