--- a/labs/fnd-01-appd-apm-java/fnd-01-appd-apm-java.json
+++ b/labs/fnd-01-appd-apm-java/fnd-01-appd-apm-java.json
@@ -10,9 +10,13 @@
         {"title": "Java"}
     ],
     "files": [{
-            "title": "Getting started",
-            "file": "lab-exercise-01.md"
+            "title": "Reserve Your Lab Sandbox Environment",
+            "file": "lab-exercise-00.md"
         },
+        {
+            "title": "Java Application Monitoring Fundamentals",
+            "file": "lab-exercise-01.md"
+        },        
         {
             "title": "Download the AppDynamics Java APM Agent",
             "file": "lab-exercise-02.md"
