--- a/labs/fnd-02-appd-svm/fnd-02-appd-svm.json
+++ b/labs/fnd-02-appd-svm/fnd-02-appd-svm.json
@@ -23,7 +23,7 @@
             "file": "lab-exercise-02.md"
         },
         {
-            "title": "Download the Server Visibility Agent from the Controller",
+            "title": "Download the Server Visibility Agent",
             "file": "lab-exercise-03.md"
         },
         {
